# research

./: .gitignore  README
c/hello/: CMakeLists.txt
c/hello/src/: AacDecoder.c  AacDecoder.h  CAacDecoder.hpp  CMp3Decoder.hpp  Decoder.c  Decoder.h  IDecoder.hpp  InfAacDecoder.c  InfAacDecoder.h  InfDecoder.h  InfMp3Decoder.c  InfMp3Decoder.h  Mp3Decoder.c  Mp3Decoder.h  Object.c  Object.h  Object.r  String.c  String.h  main.c  main.cpp  point.c  point.h  scx  vaacdecoder.c  vaacdecoder.h  vdecoder.c  vdecoder.h  vmp3decoder.c  vmp3decoder.h
c/ooc/: CMakeLists.txt
c/ooc/src/: irole.h  main.cpp  sinbad.c  sinbad.h  vtbl.h
c/plugin/: CMakeLists.txt
c/plugin/src/core/: main.cpp  plugin.h  plugininf.h  scx
c/plugin/src/forfoo/: forfoo.cpp
c/plugin/src/mul/: mul.cpp
c/plugin/src/plus/: plus.cpp
cxx/: byteorder.cpp  charcmp.cpp  concurrency.cpp  firstedge.cpp  player.cpp  simple-stack.cpp  tail-recursive.cpp  tmpvtr.cpp  xor.cpp
cxx/dlopen/: Agent.h  BaseRole.h  Factory.h  Ogre.h  Sinbad.h  bf  bm  build_factory  main.cpp
cxx/plugins/: PluginObject.h
exercise/: TelBook.cpp  TelBook.h  app  build  list.cpp  main.cpp  scx
go/: hello.go  run  trace.go  trace_test.go
gtk/: hello.c
java/: anonymous.java  signalslot.java  test.java
libfetch/: main.c
lua/: bin  build  hello.lua  hex  lua  lua.cpp  main.cpp
ncurses/: a  build  color  keys  main.cpp  simple.cpp
overflow/: main.c
protobuf/msgbench/: CMakeLists.txt  PacketBuffer.h
protobuf/msgbench/src/: PacketInf.h  errno.h  main.cpp  message.h  msghead.pb.cc  msghead.pb.h
protobuf/new/: msghead.proto
protobuf/old/: message.h  msgno.h
scheme/: root.scm  sum.cpp  test.scm
shell/: del
shm/: main.cpp
udsocket/: main.cpp
webpy/: main.py
webpy/share/: img-list
webpy/static/: ajax.css
webpy/templates/: ajax.html  dbrows.html  index.html
